fix scrollbar issue

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -60,8 +60,6 @@
   }
   
   section{
-    overflow-x: hidden; /* Hide horizontal scrollbar */
-    max-height: 300px;
     min-height: 100vh;
     width: 100%;
     position: absolute;
@@ -706,6 +704,7 @@
       color: var(--color-secondary);
     }
     .bg-text{
+      overflow: hidden;
       box-sizing: border-box;
       margin-right: -3000px;
       position: absolute;
